--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -71,5 +71,5 @@ jobs:
           ${{ runner.os }}-maven-
     - name: jacoco report
       run: |
-        mvn test jacoco:report
-        ls -lrt target/site/jacoco
+        mvn clean build
+        
